appId: global.safe.mobileapp.ios
---
- runFlow:
    file: ../shared/clean-app-start.yml
- tapOn:
    id: 'e2eOnboardedAccount'
- tapOn:
    id: 'dropdown-label-view'
    index: 0
- tapOn:
    id: 'add-existing-account'
    # this is a workaround, probably a bug in maestro
    # the first time the sheet loads Maestro doesn't see the id
    # it's visible in xcode's inspectork, but maestro doesn't have it in it's hierarchy
    # that's why we click on the coordinates instead
    #point: '50%,92%'
- tapOn:
    id: 'enter-manually'
- tapOn: 'Enter safe name here'
- inputText: 'My safe'
- tapOn:
    text: 'Paste address...'
- inputText: 'sep:0x9BFCA75a05175503580D593F4330b5505c594596'
- assertVisible: 'Sepolia'
- assertVisible:
    id: 'success-icon'
- tapOn:
    id: 'continue-button'
- assertVisible: 'Import your signers to unlock account'
- assertVisible: '.*Before you import signers....*'
- assertVisible:
    id: 'signer-0x65F8236309e5A99Ff0d129d04E486EBCE20DC7B0'
- assertVisible:
    id: 'signer-0x0D65139Da4B36a8A39BF1b63e950038D42231b2e'
- assertVisible:
    id: 'signer-0x8aEf2f5c3F17261F6F1C4dA058D022BE92776af8'
- tapOn:
    id: 'continue-button'
- assertVisible: '0x9BFC...4596.*'
- assertVisible: 'Sepolia'
